# longdoc-transformer-classifier

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: interview_notes.md  limitations.md  method_notes.md  reproducibility.md
reports/: ag_news_length_analysis.json  ag_news_length_analysis.md  arxiv_length_analysis.json  arxiv_length_analysis.md  baseline_ag_news.md  baseline_ag_news_metrics.json  baseline_arxiv.md  baseline_arxiv_metrics.json  chunked_transformer_ag_news.md  chunked_transformer_ag_news_metrics.json  chunked_transformer_arxiv.md  chunked_transformer_arxiv_metrics.json  long_context_transformer_arxiv.md  long_context_transformer_arxiv_metrics.json  model_card.md  model_comparison.json  model_comparison.md  project_summary.md  repo_health_check.md  summary_classifier_arxiv.md  summary_classifier_arxiv_metrics.json  tfidf_sweep_arxiv.json  tfidf_sweep_arxiv.md  truncated_transformer_ag_news.md  truncated_transformer_ag_news_metrics.json  truncated_transformer_arxiv.md  truncated_transformer_arxiv_metrics.json
src/longdoc_transformer_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
tests/: test_baseline.py  test_benchmark_config.py  test_benchmark_suite.py  test_chunk_selection.py  test_chunked_transformer.py  test_chunking.py  test_compare_reports.py  test_data.py  test_docs.py  test_features.py  test_length_analysis.py  test_long_context_transformer.py  test_metrics.py  test_portfolio_reports.py  test_summarization.py  test_tfidf_sweep.py  test_transformer_baseline.py  test_visualization.py
(+24 files in other folders)
