[project]
name = "longdoc-transformer-classifier"
version = "0.1.0"
description = "Long-document NLP classification experiments with a reproducible classical baseline first."
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scikit-learn",
    "datasets"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["src"]
